--- a/checkpoint-one/css/style.css
+++ b/checkpoint-one/css/style.css
@@ -1,1 +1,169 @@
+body{
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 15px;
+    line-height: 1.5;
+    padding: 0;
+    margin: 0;
+    background-color:lightblue;
+}
 
+.container{
+    width: 70%;
+    margin: auto;
+    overflow: auto;
+}
+
+/* Header Style */
+header{
+    background-color: black;
+    border-bottom:red  4px solid;
+    color: #ffffff;
+    position: -webkit-sticky;
+    position: sticky;
+    top: 0;
+    padding: 5px;
+}
+
+header .higlight{
+    color: red;
+}
+
+header a{
+    color: #ffffff;
+
+}
+
+header a:hover{
+    color:red;
+    font-weight: bold;
+}
+
+header ul{
+    margin: 0;
+    padding: 0;   
+}
+
+header li{
+    float: left;
+    display: inline;
+    padding: 0 20px 0 20px 
+}
+
+
+header #Logo{
+    float: left;
+}
+
+header #Logo h1{
+    margin: 0;
+}
+
+header nav{
+    float: right;
+    margin-top: 10px
+}
+
+/* MainFocus Style */
+
+#mainfocus{
+    background-image: url(https://lh3.googleusercontent.com/ah1_wFOk8tQNRiQbwOLvb6T-b2CrUX9nVFiez-sm2kRiACi-frIcoL32HdL_X4wmCPl96k3dMmDZDqLp8Di5hUsEsYceCJDC=s1200);
+    min-height: 400px;
+    background-repeat: no-repeat;
+    text-align: center;
+
+}
+
+#mainfocus h1 {
+    font-size: 30px;
+    margin-top: 50px;
+    margin-bottom: 20px;
+    background-color: black;
+    color: #ffffff;
+    border-radius: 30px;
+
+}
+
+#mainfocus p{
+    border-radius: 25px;
+    font-size: 20px;
+    background-color: black;
+    color: #ffffff;
+}
+
+/* MainFocus-2 Style */
+
+#mainfocus-2{
+    background:url(https://cdn-image.departures.com/sites/default/files/styles/responsive_900x600/public/1478292097/tokyo-after-dark_ginza_1100x733.jpg?itok=lVOAwRCF);
+    min-height: 400px;
+    text-align: center;
+    color: #ffffff;
+}
+
+#mainfocus-2 h1{
+    border-radius: 30px;
+    font-size: 30px;
+    background-color: black;
+    color: #ffffff;
+}
+
+#mainfocus-2 li{
+    font-size: 20px;
+    background-color: black;
+    color: #ffffff;
+    list-style-type: none;
+    border-radius: 30px;
+
+}
+
+#mainfocus-2 ul{
+    font-size: 20px;
+    background-color: black;
+    color: #ffffff;
+    list-style-type: none;
+    border-radius: 30px;
+    
+}
+
+section .highlight{
+    color: red;
+}
+
+/* Newsletter Style */
+
+#newsletter{
+    padding: 15px;
+    color: white;
+    background-color: black;
+
+}
+
+#newsletter h1{
+    float: left;
+}
+
+#newsletter form{
+    float: right;
+    margin-top: 25px;
+}
+
+.button-1{
+    height: 20px;
+    background-color: red;
+    border: none;
+}
+
+.button-1:hover{
+    font-weight: bold;
+}
+
+
+/* Footer Style */
+
+footer{
+    padding: 20px;
+    margin-top: 20px;
+    color: white;
+    background-color: black;
+    text-align: center;
+
+}
