--- a/05week/travel-gram/css/style.css
+++ b/05week/travel-gram/css/style.css
@@ -1,1 +1,17 @@
+.box {
+    background-color: antiquewhite;
+    border: 1px solid black;
+    margin: 5px;
+}
 
+.grid {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-gap: 20px;
+    width: calc(100% - 20px);
+    grid-template-areas: 
+        "box1 box1 box2 box2"
+        "box3 box3 box4 box5"
+        "box3 box3 box6 box6"
+        "box7 box8 box9 box10"
+}
