working on transitions

--- a/05week/transitions-and-transformations/css/style.css
+++ b/05week/transitions-and-transformations/css/style.css
@@ -1,5 +1,6 @@
 body {
     margin: 0 auto;
+    width: 50px;
 }
 
 .box1 {
@@ -8,6 +9,8 @@ body {
     background-color: aqua;
     margin: 20px;
 }
+
+
 
 .box2 {
     height: 50px;
@@ -75,14 +78,17 @@ body {
 .box11 {
     height: 50px;
     width: 50px;
-    background-color:blue;
+    background-color: blue;
     margin: 20px;
 }
 
-.box12 { 
+.box12 {
     height: 50px;
     width: 50px;
     background-color: slategray;
     margin: 20px;
 }
 
+.trigger:hover .box1 {
+    transform: translate(200px, 150px) rotate(20deg);
+}
