--- a/05week/travel-gram/css/style.css
+++ b/05week/travel-gram/css/style.css
@@ -1,10 +1,21 @@
+.main-container {
+    display: grid;
+    grid-gap: 20px;
+    width: calc(100%-20px);
+}
+
+.header {
+    width: 500px;
+    margin: 0 auto;
+}
+
 .box {
     background-color: antiquewhite;
     border: 1px solid black;
     margin: 5px;
 }
 
-.grid {
+/* .grid {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
     grid-gap: 20px;
@@ -14,5 +25,16 @@
         "box3 box3 box4 box5"
         "box3 box3 box6 box6"
         "box7 box8 box9 box10"
+} */
+
+.group1 {
+    display: flex;
 }
 
+.group2 {
+    display: flex;
+}
+
+.group3 {
+    display: flex;
+}
