--- a/04week/tomorrows-technology/css/style.css
+++ b/04week/tomorrows-technology/css/style.css
@@ -3,6 +3,7 @@ body {
 }
 
 .container {
+    float: left;
     width: 850px;
     margin: 10px;
 }
@@ -11,7 +12,7 @@ img {
     max-width: 100%;
 }
 
-.container h1 {
+section h1 {
     font-size: 28pt;
     font-weight: 700;
     margin-bottom: 15px;
@@ -30,4 +31,102 @@ button {
     font-weight: 600;
     border: none;
     background-color: #4C4C4C;
+}
+
+/* Begin Side Links */
+.stories {
+    width: 250px;
+    float: left;
+    margin: 10px 0px 0px 40px;
+}
+
+.stories h1 {
+    font-size: 16pt;
+    font-weight: 700;
+    border-bottom: 2px solid black;
+    padding-bottom: 10px;
+    margin-bottom: 20px;
+}
+
+.stories ul {
+    list-style-type: none;
+}
+
+.stories li {
+    margin-bottom: 20px;
+}
+
+.stories a {
+    text-decoration: none;
+    color: #000;
+    font-size: 10pt;
+    font-weight: 600;
+}
+/* Begin mobile footer */
+.mobile {
+    width: 100%;
+    display: flex;
+    justify-content: space-around;
+    margin-top: 20px;
+    background-color: #5D5D5D;
+    color: #F5F5F5;
+}
+
+.links {
+    width: 200px;
+    margin: 40px 0px 10px 0px;
+}
+
+.mobile h1 {
+    font-size: 14pt;
+    font-weight: 600;
+    margin-bottom: 10px;
+}
+
+.mobile li {
+    list-style-type: none;
+    border-bottom: 1px solid #F5F5F5;
+    padding-bottom: 10px;
+    margin-bottom: 5px;
+}
+
+.mobile a {
+    text-decoration: none;
+    color: #F5F5F5;
+}
+
+i {
+    color: #f5f5f5;
+    float: right;
+}
+
+/* Media Queries */
+@media (min-width: 320px) {
+    .container {
+        width: 100%;
+    }
+
+    .stories {
+        display: none;
+    }
+}
+
+@media (min-width: 768px) {
+    .container {
+        width: 100%
+    }
+
+    .mobile {
+        display: none;
+    }
+}
+
+@media (min-width: 992px) {
+    .container {
+        width: 850px;
+    }
+
+    .stories {
+        display: initial;
+    }
 }
