--- a/checkpoint-one/css/style.css
+++ b/checkpoint-one/css/style.css
@@ -1,1 +1,96 @@
+body {
+    margin: 0px;
+}
 
+.shipping {
+    background-color: darkgrey;
+    font-family: Arial, Helvetica, sans-serif;
+    text-align: center;
+    color:white;
+    padding: 3px;
+    border-bottom-color: red;
+    border-bottom-width: 1px;
+    border-bottom-style: solid;
+    margin: 0px;
+}
+.nav {
+    background-color: black;
+    padding: 20px 30px 10px 5px;
+}
+nav, a {
+    text-decoration: none;
+    padding-left: 20px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    color: white;
+    font-size: 21px;
+    float: right;
+    padding-right: 20px;
+    padding-top: 30px;
+}
+.logo {
+    padding-left: 10px;
+    margin-left: 80px;
+}
+.cb {
+    margin-left: 250px;
+}
+h1  {
+    text-align: center;
+    padding-top: 40px;
+    padding-bottom: 5px;
+    font-size: 30px;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
+.sale_items {
+    width: 90%;
+    overflow: hidden;
+    padding: 20px 0px;
+    margin: 20px auto;
+}
+.sale_items ul{
+    margin: 0px;
+    padding: 0px;
+}
+.sale_items ul li {
+    width: 27%;
+    padding: 40px;
+    list-style: none;
+    float:  left;
+    height: 300px;   
+    border-width: 1px;
+    text-align: center
+}
+.sale_items ul li img{
+    border-width: 1px;
+    border-color: black;
+    border-style: solid;
+}
+.about   {
+    margin-right: 120px;
+    margin-left: 120px;
+}
+.fa {
+    padding: 10px;
+    font-size: 30px;
+    width: 50px;
+    text-align: center;
+    text-decoration: none;
+    margin: 5px 10px;
+    background: gray;
+    color: white;
+}
+.fa:hover {
+    opacity: 0.7;
+}
+.img  {
+    padding: 0px;
+    margin-bottom: 30px;
+    margin-right: auto;
+    margin-left: auto;
+    text-align: center;
+    font-size: 15px;
+    list-style: none;
+}
+footer  {
+    text-align: center;
+}
