changed margins for mobile and tablet view

--- a/04week/tomorrows-technology/css/style.css
+++ b/04week/tomorrows-technology/css/style.css
@@ -104,6 +104,7 @@ i {
 @media (min-width: 320px) {
     .container {
         width: 100%;
+        margin: 0 auto;
     }
 
     .stories {
@@ -113,7 +114,8 @@ i {
 
 @media (min-width: 768px) {
     .container {
-        width: 100%
+        width: 100%;
+        margin: 0 auto;
     }
 
     .mobile {
