--- a/05week/travel-gram/css/style.css
+++ b/05week/travel-gram/css/style.css
@@ -1,1 +1,161 @@
+.container {
+    font-family: 'Roboto', sans-serif;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    /* grid-template-rows: repeat(5,1fr); */
+    grid-gap: 10px;
+    grid-template-areas:
+        "header header header header"
+        "box1 box1 box2 box2"
+        "box3 box3 box4 box5"
+        "box3 box3 box6 box6"
+        "box7 box8 box9 box10";
+}
 
+header {
+    grid-area: header;
+    text-align: center;
+    background-color: blue;
+}
+h1{
+    margin-bottom: 5px;
+}
+h2{
+    font-size: 16pt;
+    margin-top: 0px;
+}
+
+.tablet {
+    display: none;
+}
+
+.mobile {
+    display: none;
+}
+
+img{
+    max-width: 300px;
+    max-height: 200px;
+    padding:10px;
+    display: flex;
+    justify-content: center;
+    align-content: center;
+}
+
+.text{
+    font-size: 10pt;
+    padding: 10px;
+}
+
+.box1 {
+    grid-area: box1;
+    display: flex;
+    flex-flow: row;
+    background-color: aqua;
+}
+
+.box2 {
+    grid-area: box2;
+    display: flex;
+    flex-flow: row;
+    background-color: green;
+}
+
+.box3 {
+    grid-area: box3;
+
+    background-color: yellow;
+}
+
+.box4 {
+    grid-area: box4;
+    background-color: red;
+}
+
+.box5 {
+    grid-area: box5;
+    background-color: purple;
+}
+
+.box6 {
+    grid-area: box6;
+    display: flex;
+    flex-flow: row;
+    background-color: magenta;
+}
+
+.box7 {
+    grid-area: box7;
+    background-color: greenyellow;
+}
+
+.box8 {
+    grid-area: box8;
+    background-color: grey;
+}
+
+.box9 {
+    grid-area: box9;
+    background-color: aquamarine;
+}
+
+.box10 {
+    grid-area: box10;
+    background-color: orange;
+}
+
+@media (max-width: 768px) {
+    .container {
+        grid-template-columns: repeat(2, 1fr);
+        grid-template-areas:
+            "header header"
+            "box1 box1"
+            "box1 box1"
+            "box2 box3"
+            "box4 box4"
+            "box5 box6"
+            "box7 box8"
+            "box9 box10"
+    }
+
+    .desktop {
+        display: none;
+    }
+
+    .tablet {
+        display: inherit;
+    }
+
+}
+
+@media (max-width: 576px) {
+    .container {
+        grid-template-columns: repeat(1, 1fr);
+        grid-template-areas:
+            "header"
+            "box1"
+            "box2"
+            "box3"
+            "box4"
+            "box5"
+            "box6"
+            "box7"
+            "box8"
+            "box9"
+            "box10"
+
+    }
+
+    .desktop {
+        display: none;
+    }
+
+    .tablet {
+        display: none;
+    }
+
+    .mobile {
+        display: inherit;
+    }
+
+}
