--- a/05week/travel-gram/css/style.css
+++ b/05week/travel-gram/css/style.css
@@ -1,1 +1,56 @@
+*{
+    box-sizing: border-box;
+}
+
+.container{
+    display: grid;
+    grid-template-columns: repeat(4,1fr);
+    width: 90%;
+    margin: 0 auto;
+    grid-template-rows: 1fr 2fr 1fr;
+    grid-auto-rows: 100px;
+    grid-gap: 10px;
+    
+    
+    
+}
+
+
+.container > div{
+    display: grid;
+    align-items: center;
+    justify-content: center;
+    border: solid black 1px;
+    text-align: center;
+    padding: 1em;
+
+    
+    
+}
+.container img{
+    margin: 0 auto;
+}
+
+
+
+
+  .container div:nth-child(1) {
+    grid-column: 1 / 3;
+    
+ }
+ .container div:nth-child(2) {
+    grid-column: 3 / 5;
+    
+ }
+ .container div:nth-child(3) {
+    grid-column: 1 / 3;
+    
+ }
+ .container div:nth-child(4) {
+    grid-column: 3 / 5;
+    
+ }
+ 
+
+ 
 
