--- a/04week/nasa/css/style.css
+++ b/04week/nasa/css/style.css
@@ -1,26 +1,33 @@
-body {
+header {
+    background-image: url(/img/nasa-background.jpg);
     width: 850px;
-    margin: 0 auto; 
-}
-main {
-    background-image: url("/img/nasa-background.jpg");
-    background-repeat: no-repeat;
     height: 450px;
-    color: white;
-    font-family: 'Spicy Rice', cursive;
-    text-align:center;
-    font-size: 30px;
-}
-section {
     display: flex;
+    justify-content: center;
+    align-items: center;
+    font-family: 'Spicy Rice', cursive;
+    color: white;
+    font-size: 50px;
+}
+.box-1, .box-2, .box-3 {
+    margin: 20px;
+}
+.container-1 {
+    background-color: #ccc;
+    display: flex;
+    width: 850px;
     height: 324px;
-    flex-direction: row;
     justify-content: space-between;
-    background-color: #E8E7E8;
 }
-article {
+.container-1 div {
     width: 270px;
-    height: 374px;
-    background-color: #E8E7E8;
+    font-family: 'Open Sans', sans-serif;
+    margin-top: 8px;
 }
-
+.container-1 h3 {
+    font-family: 'Baloo Bhaijaan', cursive;
+}
+input[type=text] {
+    width:60%;
+    border: 0px;
+}
