--- a/05week/travel-gram/css/style.css
+++ b/05week/travel-gram/css/style.css
@@ -1,1 +1,207 @@
+.container div {
+    padding: 20px;
+    border: 2px solid black;
+}
+
+img {
+    width: 100%;
+}
+
+
+
+/* phone */
+
+@media (max-width: 550px) {
+
+    .container {
+        display: grid;
+        grid-template-columns: 1fr;
+        grid-template-rows: repeat(10 1.5fr);
+        height: 3000px;
+        grid-gap: 20px;
+        padding-left: 50px;
+        padding-right: 50px;
+    }
+    
+    .one {
+        grid-column: 1;
+        grid-row: 1;
+    }
+    
+    .two { 
+        grid-column: 1;
+        grid-row: 2;
+    }
+    
+    .three { 
+        grid-column: 1;
+        grid-row: 3;
+    }
+    
+    .four { 
+        grid-column: 1;
+        grid-row: 4;
+    }
+    
+    .five { 
+        grid-column: 1;
+        grid-row: 5;
+    }
+    
+    .six { 
+        grid-column: 1;
+        grid-row: 6;
+    }
+    
+    .seven { 
+        grid-column: 1;
+        grid-row: 7;
+    }
+    
+    .eight { 
+        grid-column: 1;
+        grid-row: 8;
+    }
+    
+    .nine { 
+        grid-column: 1;
+        grid-row: 9;
+    }
+    
+    .ten { 
+        grid-column: 1;
+        grid-row: 10;
+    }
+}
+
+
+/* tablet */
+
+@media (min-width: 551px) {
+
+    .container {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows: 2fr 1.25fr .75fr 2fr 1.25fr .75fr 1.5fr;
+        height: 2000px;
+        grid-gap: 20px;
+    }
+    
+    .one {
+        grid-column: 1 / 3;
+        grid-row: 1;
+    }
+    
+    .two { 
+        grid-column: 1;
+        grid-row: 2;
+    }
+    
+    .three { 
+        grid-column: 2;
+        grid-row: 2;
+    }
+    
+    .four { 
+        grid-column: 1 / 3;
+        grid-row: 3;
+    }
+    
+    .five { 
+        grid-column: 1 / 3;
+        grid-row: 4;
+    }
+    
+    .six { 
+        grid-column: 1;
+        grid-row: 5;
+    }
+    
+    .seven { 
+        grid-column: 2;
+        grid-row: 5;
+    }
+    
+    .eight { 
+        grid-column: 1 / 3;
+        grid-row: 6;
+    }
+    
+    .nine { 
+        grid-column: 1;
+        grid-row: 7;
+    }
+    
+    .ten { 
+        grid-column: 2;
+        grid-row: 7;
+    }
+    
+}
+
+
+/* desktop */
+
+@media (min-width: 992px) {
+
+.container {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1.25fr .75fr 1.5fr;
+    height: 1000px;
+    grid-gap: 20px;
+}
+
+.one {
+    grid-column: 1 / 3;
+    grid-row: 1;
+
+}
+
+.two { 
+    grid-column: 3 / 5;
+    grid-row: 1;
+}
+
+.three { 
+    grid-column: 1 / 3;
+    grid-row: 2 / 4;
+}
+
+.four { 
+    grid-column: 3 / 3;
+    grid-row: 2 / 3;
+}
+
+.five { 
+    grid-column: 4 / 4;
+    grid-row: 2 / 3;
+}
+
+.six { 
+    grid-column: 3 / 5;
+    grid-row: 3 / 4;
+}
+
+.seven { 
+    grid-column: 1;
+    grid-row: 4 / 5;
+}
+
+.eight { 
+    grid-column: 2;
+    grid-row: 4 / 5;
+}
+
+.nine { 
+    grid-column: 3;
+    grid-row: 4 / 5;
+}
+
+.ten { 
+    grid-column: 4;
+    grid-row: 4 / 5;
+}
+
+}
 
