transitions-and-transformations

--- a/05week/transitions-and-transformations/css/style.css
+++ b/05week/transitions-and-transformations/css/style.css
@@ -27,7 +27,7 @@ main {
  .box:nth-child(even):hover, .box:nth-child(even):active {
     width: 100px;
     height: 100px;
-    transform: translate(100%, 0%) rotate(180deg); 
+    transform: translate(100px, 0%) rotate(180deg); 
   }
 
 .box:nth-child(odd) {
@@ -41,5 +41,5 @@ main {
   .box:nth-child(odd):hover, .box:nth-child(odd):active {
     width: 25px;
     height: 25px;
-    transform: translate(-100%, 0%) rotate(-180deg);
+    transform: translate(-100px, 0%) rotate(-180deg);
   }
