--- a/05week/travel-gram/css/style.css
+++ b/05week/travel-gram/css/style.css
@@ -1,1 +1,557 @@
+body {
+    height: 900px;
+}
 
+h1 {
+    text-align: center;
+    font-size: 30px;
+}
+
+.desktop {
+    text-align: center;
+    font-size: 15px;
+}
+
+.tablet {
+    display: none;
+}
+
+.mobile {
+    display: none;
+}
+
+.gridcontainer {
+  display: grid;
+  grid-template-columns: 25% 25% 25% 25%;
+  grid-template-rows: 28% 28% 16% 28%;
+  row-gap: 20px;
+  column-gap: 20px;
+  width: 1100px;
+  height: 700px;
+  margin-left: 30px;
+  margin-right: 30px;
+  margin-top: 30px; 
+}
+
+
+.item1 {
+grid-column: 1 / 3;
+grid-row: 1;
+border: 1px solid;
+border-color: black;
+display: flex;
+justify-content: space-around;
+
+}
+
+.item1image, .item1text {
+    padding: 10px;   
+}
+
+.item1box {
+    background-color: orange;
+    width: 350px;
+    height: 20px;
+    align-self: flex-end;
+    margin-right: 20px;
+    margin-bottom: 20px;
+}
+
+.item2 {
+    grid-column: 3/ 5;
+    grid-row: 1;
+    border: 1px solid;
+    border-color: black;
+    display: flex;
+    justify-content: space-around;
+    
+}
+.item2image, .item2text {
+    padding: 10px;   
+}
+.item2box {
+    background-color: orange;
+    width: 350px;
+    height: 20px;
+    align-self: flex-end;
+    margin-right: 20px;
+    margin-bottom: 20px;
+}
+
+.item3 {
+    grid-column: 1 / 3;
+    grid-row: 2 / 4;
+    border: 1px solid;
+    border-color: black;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+.item3image, .item3text {
+    padding: 10px; 
+    align-items: center;  
+}
+.item3box {
+    background-color: orange;
+    width: 100px;
+    height: 30px;
+    align-self: flex-end;
+    margin-right: 20px;
+    margin-bottom: 20px;
+}
+
+.item4 {
+    grid-column: 3;
+    grid-row: 2;
+    border: 1px solid;
+    border-color: black;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+.item4image, .item4text {
+    padding: 5px; 
+    align-items: center; 
+    font-size: 12px; 
+}
+.item4box {
+    background-color: orange;
+    width: 50px;
+    height: 20px;
+    align-self: flex-end;
+    margin-right: 20px;
+    margin-bottom: 20px;
+}
+
+.item5 {
+    grid-column: 4;
+    grid-row: 2;
+    border: 1px solid;
+    border-color: black;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+.item5image, .item5text {
+    padding: 5px; 
+    align-items: center; 
+    font-size: 12px; 
+}
+.item5box {
+    background-color: orange;
+    width: 50px;
+    height: 20px;
+    align-self: flex-end;
+    margin-right: 20px;
+    margin-bottom: 20px;
+}
+
+.item6 {
+    grid-column: 3 / 5;
+    grid-row: 3;
+    border: 1px solid;
+    border-color: black;
+    display: flex;
+    justify-content: space-around;
+}
+.item6image, .item6text {
+    padding: 10px; 
+    font-size: 12px;   
+}
+
+.item6box {
+    background-color: orange;
+    width: 100px;
+    height: 20px;
+    align-self: flex-end;
+    margin-right: 20px;
+    margin-bottom: 10px;
+}
+
+.item7 {
+    grid-column: 1;
+    grid-row: 4;
+    border: 1px solid;
+    border-color: black;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+.item7image, .item7text {
+    padding: 5px; 
+    align-items: center; 
+    font-size: 12px; 
+}
+.item7box {
+    background-color: orange;
+    width: 50px;
+    height: 20px;
+    align-self: flex-end;
+    margin-right: 20px;  
+}
+
+.item8 {
+    grid-column: 2;
+    grid-row: 4;
+    border: 1px solid;
+    border-color: black;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+.item8image, .item8text {
+    padding: 5px; 
+    align-items: center; 
+    font-size: 12px; 
+}
+.item8box {
+    background-color: orange;
+    width: 50px;
+    height: 20px;
+    align-self: flex-end;
+    margin-right: 20px;
+    
+}
+
+.item9{
+    grid-column: 3;
+    grid-row: 4;
+    border: 1px solid;
+    border-color: black;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+.item9image, .item9text {
+    padding: 5px; 
+    align-items: center; 
+    font-size: 12px; 
+}
+.item9box {
+    background-color: orange;
+    width: 50px;
+    height: 20px;
+    align-self: flex-end;
+    margin-right: 20px;   
+}
+
+.item10{
+    grid-column: 4 ;
+    grid-row: 4;
+    border: 1px solid;
+    border-color: black;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+.item10image, .item10text {
+    padding: 5px; 
+    align-items: center; 
+    font-size: 12px; 
+}
+.item10box {
+    background-color: orange;
+    width: 50px;
+    height: 20px;
+    align-self: flex-end;
+    margin-right: 20px   
+}
+
+/*   TABLET START HERE   */
+
+@media (max-width: 768px) {
+    .gridcontainer {
+        display: grid;
+        grid-template-columns: 50% 50%;
+        grid-template-rows: 25% 25% 30% 20%;
+        row-gap: 20px;
+        column-gap: 20px;
+        width: 650px;
+        height: 700px;
+        margin: 20px; 
+      }
+}
+
+@media (max-width: 768px) {
+    .item1, .item2, .item7, .item8, .item9, .item10 {
+        display: none;
+    }
+}
+
+@media (max-width: 768px) {
+    .item3 {
+        grid-column: 1 / 3;
+        grid-row: 1 / 3;
+        border: 1px solid;
+        border-color: black;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+
+    }
+    .item3image, .item3text {
+        padding: 10px; 
+        align-items: center;  
+    }
+    .item3box {
+        background-color: orange;
+        width: 100px;
+        height: 30px;
+        align-self: flex-end;
+        margin-right: 20px;
+        margin-bottom: 20px;
+    }
+
+}
+
+
+@media (max-width: 768px) {
+    .item4 {
+        grid-column: 1 /2;
+        grid-row: 3 / 4;
+        border: 1px solid;
+        border-color: black;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+    }
+    .item4image, .item4text {
+        padding: 5px; 
+        align-items: center; 
+        font-size: 12px; 
+    }
+    .item4box {
+        background-color: orange;
+        width: 50px;
+        height: 20px;
+        align-self: flex-end;
+        margin-right: 20px;
+        margin-bottom: 20px;
+    }
+}
+
+@media (max-width: 768px) {
+    .item5 {
+        grid-column: 2 / 3;
+        grid-row: 3 / 4;
+        border: 1px solid;
+        border-color: black;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+    }
+    .item5image, .item5text {
+        padding: 5px; 
+        align-items: center; 
+        font-size: 12px; 
+    }
+    .item5box {
+        background-color: orange;
+        width: 50px;
+        height: 20px;
+        align-self: flex-end;
+        margin-right: 20px;
+        margin-bottom: 20px;
+    }
+}
+
+@media (max-width: 768px) {
+    .item6 {
+        grid-column: 1 / 3;
+        grid-row: 4;
+        border: 1px solid;
+        border-color: black;
+        display: flex;
+        justify-content: space-around;
+    }
+    .item6image, .item6text {
+        padding: 10px; 
+        font-size: 12px;   
+    }
+
+    .item6box {
+        background-color: orange;
+        width: 100px;
+        height: 20px;
+        align-self: flex-end;
+        margin-right: 20px;
+        margin-bottom: 10px;
+    }
+}
+
+@media (max-width: 768px) {
+    .desktop, .mobile {
+        display: none;
+    }
+}
+
+@media (max-width: 768px) {
+    .tablet {
+        display: flex;
+        justify-content: center;
+        font-size: 15px;
+    }
+}
+       
+/*   MOBILE START HERE   */
+
+
+@media (max-width: 576px) {
+    .gridcontainer {
+        display: grid;
+        grid-template-columns: 100%;
+        grid-template-rows: 25% 25% 25% 25%;
+        row-gap: 30px;
+        column-gap: 20px;
+        width: 300px;
+        height: 700px;
+        margin-left: 120px;
+        margin-top: 10px; 
+        
+    }
+}
+
+@media (max-width: 576px) {
+    .desktop, .tablet {
+        display: none;
+    }
+}
+
+
+@media (max-width: 576px) {
+    .mobile {
+        display: flex;
+        justify-content: center;
+        font-size: 15px;
+    }
+}
+
+@media (max-width: 576px) {
+    body {
+        justify-content: center;
+        align-items: center;
+    }
+}
+
+@media (max-width: 576px) {
+    .item1, .item2, .item3, .item4, .item5, .item6 {
+        display: none;
+    }
+}
+
+@media (max-width: 576px) {
+    .item7{
+        grid-column: 1;
+        grid-row: 1 / 2;
+        border: 1px solid;
+        border-color: black;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        margin-bottom: 5px;
+        height: 190px;
+    }
+    .item7image, .item7text {
+        
+        align-items: center; 
+        font-size: 12px; 
+    }
+    .item7box {
+        background-color: orange;
+        width: 50px;
+        height: 20px;
+        align-self: flex-end;
+        margin-right: 20px;
+    }
+}
+
+@media (max-width: 576px) {
+    .item8{
+        grid-column: 1;
+        grid-row: 2 / 3;
+        border: 1px solid;
+        border-color: black;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        margin-bottom: 5px;
+        height: 190px;
+    }
+    .item8image, .item8text {
+        padding: 5px; 
+        align-items: center; 
+        font-size: 12px; 
+    }
+    .item8box {
+        background-color: orange;
+        width: 50px;
+        height: 20px;
+        align-self: flex-end;
+        margin-right: 20px;
+    }
+}
+
+@media (max-width: 576px) {
+    .item9{
+        grid-column: 1;
+        grid-row: 3 / 4;
+        border: 1px solid;
+        border-color: black;
+        display: flex;
+        align-items: center;
+        flex-direction: column;
+        margin-bottom: 5px;
+        height: 190px;
+    }
+    .item9image, .item9text {
+        padding: 5px; 
+        align-items: center; 
+        font-size: 12px; 
+    }
+    .item9box {
+        background-color: orange;
+        width: 50px;
+        height: 20px;
+        align-self: flex-end;
+        margin-right: 20px;
+    }
+}
+
+@media (max-width: 576px) {
+    .item10{
+        grid-column: 1;
+        grid-row: 4 / 5;
+        border: 1px solid;
+        border-color: black;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        margin-bottom: 5px;
+        height: 190px;
+    }
+    .item10image, .item10text {
+        padding: 5px; 
+        align-items: center; 
+        font-size: 12px; 
+    }
+    .item10box {
+        background-color: orange;
+        width: 50px;
+        height: 20px;
+        align-self: flex-end;
+        margin-right: 20px;
+    }
+}
