--- a/05week/travel-gram/css/style.css
+++ b/05week/travel-gram/css/style.css
@@ -1,1 +1,89 @@
+.container {
+    display: grid;
+    grid-gap: 10px;
+    grid-template-columns: 1fr;
+    grid-template-areas:
+    "header"
+    "nav"
+    "main"
+    "footer";
+}
+header {
+    background-color: blue;
+    grid-area: header;
+}
+header h1 {
+    color:white;
+    font-size: 50px;
+    text-align: center;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+nav {
+    background-color: rgb(0, 255, 128);
+    grid-area: nav;
+}
+nav ul{
+    display:flex;
+    justify-content: space-around;
+}
+main {
+    background-color: blue;
+    grid-area: main;
+    display: grid;
+        grid-template-columns: 1fr;
+        grid-template-areas: 
+        "story1"
+        "story2"
+        "story3"
+        "story4"
+}
+main div {
+    width: 80%;
+    height: 50%;
+}
+.story1 {
+    grid-area: story1;
+}
+.story2 {
+    grid-area: story2;
+}
+.story3 {
+    grid-area: story3;
+}
+.story4 {
+    grid-area: story4;
+}
+footer {
+    background-color:rgb(0, 255, 128);
+    grid-area: footer;
+}
+@media (min-width: 481px) and (max-width: 767px) {
+    main {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        grid-template-areas: 
+        "story1 story2"
+        "story3 story4"
 
+    }
+@media (min-width: 768px) and (max-width: 1280px) {
+    main {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        grid-template-areas: 
+        "story1 story1"
+        "story1 story1"
+        "story4 story4"
+        "story2 story2"}
+    .container {
+        display: grid;
+        grid-gap: 10px;
+        grid-template-columns: 1fr 1fr;
+        grid-template-areas:
+        "header header"
+        "nav nav"
+        "main main"
+        "main main"
+        "footer footer";
+        }
+    }
