--- a/checkpoint-two/css/style.css
+++ b/checkpoint-two/css/style.css
@@ -1,1 +1,174 @@
+body {
+    margin: 0 auto;
+    width: 75%;
+    padding: 2%;
+}
 
+.title-container {
+    background-color: #282828;
+    color: white;
+    width: 100%;
+    height: 300px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+
+.container1 {
+    display: flex;
+    height: 1000px;
+    background-color: black;
+    align-items: center;
+    justify-content: center;
+    border-top: 15px solid #1D1E25;
+}
+
+.column {
+    display: flex;
+    width: 500px;
+    margin: 0 20px;
+    color: #282828;
+    text-align: center;
+    font-family: amatic sc;
+    justify-content: space-evenly;
+
+}
+
+.column h1 {
+    font-weight: bold;
+    font-size: 50px;
+    padding-bottom: 600px;
+}
+
+.container2 {
+    display: flex;
+    height: 200px;
+    background-color: black;
+    border: 2px solid black;
+    align-items: center;
+    justify-content: space-evenly;
+    padding-bottom: 50px;
+}
+
+#wheel1 {
+    transform: rotate(90deg);
+}
+
+#wheel3 {
+    transform: rotate(180deg);
+}
+
+.container3 {
+    height: 30px;
+    border: 2px solid black;
+}
+
+.container4 {
+    height: 50px;
+    border: 2px solid black;
+}
+
+.container5 {
+    height: 70px;
+    border: 2px solid black;
+}
+
+.container6 {
+    display: flex;
+    height: 150px;
+    border: 2px solid black;
+    align-items: center;
+    justify-content: center;
+}
+
+.container6 h3 {
+    font-family: muli;
+    font-size: 20px;
+}
+
+.container7 {
+    height: 70px;
+    border: 2px solid black;
+}
+.container8 {
+    height: 50px;
+    border: 2px solid black;
+}
+.container9 {
+    height: 30px;
+    border: 2px solid black;
+    /* background-image: url(../img/Race_Checkerboard-banner.jpg); */
+}
+
+.container10 {
+    display: flex;
+    height: 1000px;
+    border: 2px solid black;
+    font-family: muli;
+}
+
+.container10 li {
+    list-style-type: none;
+}
+
+.footer {
+    display: flex;
+    background-color: fuchsia;
+    height: 100px;
+    align-items: center;
+    justify-content: center;
+}
+
+.contact {
+    width: 220px;
+    margin: 0 20px;
+}
+
+i {
+    margin: 70px;
+
+}
+
+/* .column:nth-child(1) {
+    border-top: 30px solid black;
+}
+
+.column:nth-child(2) {
+    border-top: 30px solid #F46731;
+}
+
+.column:nth-child(3) {
+    border-top: 30px solid #2bcdc0;
+} */
+
+
+@media (max-width: 576px) {
+    .title-container {
+        background-color: gray;
+    }
+
+    h1 {
+        font-size: 1em;
+    }
+
+    .title h1 {
+        font-size: 45px;
+        margin: 10px;
+        text-align: center
+    }
+
+    .column {
+        color: black;
+        text-align: center;
+        margin-top: 5%;
+    }
+
+    .container1 {
+        background-color: black;
+        flex-direction: column;
+        height: 100%;
+        align-items: center;
+        justify-content: flex-start;
+        flex-flow: column;
+    }
