homework week 5 part 2

--- a/05week/travel-gram/css/style.css
+++ b/05week/travel-gram/css/style.css
@@ -37,7 +37,7 @@ img{
     max-height: 200px;
     padding:10px;
     display: flex;
-    justify-content: center;
+    justify-items: center;
     align-content: center;
 }
 
