--- a/05week/transitions-and-transformations/css/style.css
+++ b/05week/transitions-and-transformations/css/style.css
@@ -1,5 +1,5 @@
 div {
-    border: 1px solid red;
+    border: 1px solid white;
     width: 50px;
     height: 50px;
     margin-bottom: 20px;
@@ -12,7 +12,7 @@ main {
 
 .abox {
     background-color: aqua;
-    transition: width 3s, height 3s, transform 3s 3s;   
+    transition: width 2s, height 2s, transform 2s 2s;   
    
 }
 
@@ -36,13 +36,11 @@ main {
 }
 
 
-
 /*
 
 #project (where all boxes located):hover >  all divs
 
 */
-
 
 
 main:hover > .abox {
@@ -54,4 +52,15 @@ main:hover > .abox {
 main:hover > .abox {
     background-color: aqua;
     transition: width 2s, height 2s, transform 2s 2s;
+}
+
+main:hover > .bbox {
+    width: 25px;
+    height: 25px;
+    transform: translate(-50px) rotate(-180deg);
+}
+
+main:hover > .bbox {
+    background-color: blueviolet;
+    transition: width 1s, height 1s, transform 1s 1s;
 }
