--- a/04week/welcome-to-our-site/css/style.css
+++ b/04week/welcome-to-our-site/css/style.css
@@ -1,11 +1,12 @@
 main    {
     background-color:blue;
     width: 300px;
-    height: 280px;
+    height: 220px;
     color: white;
     display: flex;
     flex-wrap: wrap;
     padding: 55px;
+    margin: 0;
 }
 h1  {
     margin: auto;
@@ -16,7 +17,7 @@ span    {
 }
 section {
     background-color: lightgray;
-    width: 355px;
+    width: 100px;
     margin: 0;
     padding: 0
 }
