--- a/05week/transitions-and-transformations/css/style.css
+++ b/05week/transitions-and-transformations/css/style.css
@@ -22,6 +22,7 @@ main {
     border: 1px black solid;
     margin-bottom: 20px;
     transition: width 2s, height 2s, transform 2s;
+    transition-timing-function: ease-out;
   }
 
  .box:nth-child(even):hover, .box:nth-child(even):active {
