First website resume

--- a/01week/resume/css/style.css
+++ b/01week/resume/css/style.css
@@ -27,10 +27,10 @@ body{ color: white;
  }
 
 h1 { color:white;
-text-align: center;
-font-size: 50px;
-font-family: Arial, Helvetica, sans-serif;
-padding-top:5px;}
+  text-align: center;
+  font-size: 50px;
+  font-family: Arial, Helvetica, sans-serif;
+  padding-top:5px;}
 
 p { font-size: 15px;
   font-family: Arial, Helvetica, sans-serif;
@@ -39,9 +39,9 @@ p { font-size: 15px;
   line-height: 35px
   }
 .content{
-    padding: 0px;
-    clear: left;
-    margin: 20px 1%;
+  padding: 0px;
+  clear: left;
+  margin: 20px 1%;
   }
   .content p{
   -webkit-column-count: 2;
@@ -66,19 +66,22 @@ aside {
   color: #ffffff;
 }
 
-aside > p {
+aside h2 {
   padding-bottom: 100px;
   float: right;
 }
 
-footer { font-size: 15px;
-font-spacing: 5px;
+footer { 
+  font-size: 15px;
   color: red;
-  line-height: 35px
+  line-height: 35px;
   text-align: center; }
 
-  section { 
-    color: white;
-    font-size: 10px;
-    align-content: center;
+  section p { 
+ color: white;
+ text-align: left;
+ font-size: 15px;
+ font-family: Arial, Helvetica, sans-serif;
+ padding: top 10px;
+    
   }
