--- a/checkpoint-two/css/style.css
+++ b/checkpoint-two/css/style.css
@@ -5,7 +5,7 @@ body {
 }
 
 .title-container {
-    background-color: #282828;
+    background-color: #757475;
     color: white;
     width: 100%;
     height: 300px;
@@ -13,7 +13,10 @@ body {
     align-items: center;
     justify-content: center;
 }
-
+div.stripe {
+    background-image: url(../img/stripe.png);
+    height: 30px;
+}
 
 .container1 {
     display: flex;
@@ -21,7 +24,7 @@ body {
     background-color: black;
     align-items: center;
     justify-content: center;
-    border-top: 15px solid #1D1E25;
+    /* border-top: 15px solid #A5A5A5; */
 }
 
 .column {
@@ -58,22 +61,27 @@ body {
 #wheel3 {
     transform: rotate(180deg);
 }
-
+/* --------------------------------------- */
 .container3 {
+    height: 10px;
+    border: 2px solid black;
+}
+.container3a {
+    height: 20px;
+    border: 2px solid black;
+}
+.container3b {
     height: 30px;
     border: 2px solid black;
 }
-
 .container4 {
     height: 50px;
     border: 2px solid black;
 }
-
 .container5 {
     height: 70px;
     border: 2px solid black;
 }
-
 .container6 {
     display: flex;
     height: 150px;
@@ -81,12 +89,10 @@ body {
     align-items: center;
     justify-content: center;
 }
-
 .container6 h3 {
     font-family: muli;
-    font-size: 20px;
+    font-size: 25px;
 }
-
 .container7 {
     height: 70px;
     border: 2px solid black;
@@ -98,18 +104,45 @@ body {
 .container9 {
     height: 30px;
     border: 2px solid black;
-    /* background-image: url(../img/Race_Checkerboard-banner.jpg); */
+}
+.container9a {
+    height: 20px;
+    border: 2px solid black;
+}
+.container9b {
+    height: 10px;
+    border: 2px solid black;
 }
 
+div.stripe2 {
+    background-image: url(../img/stripe2.png);
+    height: 130px;
+    border-bottom: 30px solid black; 
+    
+}
+/* --------------------------------------- */
+
+.content1 {
+    display: grid;
+    grid-template-columns: 30% 70%;
+
+}
 .container10 {
     display: flex;
-    height: 1000px;
+    height: 400px;
     border: 2px solid black;
     font-family: muli;
 }
 
-.container10 li {
+li {
     list-style-type: none;
+}
+
+.container11 {
+    display: flex;
+    height: 400px;
+    border: 2px solid black;
+    font-family: muli;
 }
 
 .footer {
