adding media queries

--- a/checkpoint-two/css/style.css
+++ b/checkpoint-two/css/style.css
@@ -117,20 +117,30 @@ div.stripe {
 div.stripe2 {
     background-image: url(../img/stripe2.png);
     height: 130px;
-    border-bottom: 30px solid black; 
-    
+    border-top: 500px solid black;
+    /* border-bottom: 30px solid black;  */
 }
+
+div.stripe3 {
+    background-image: url(../img/stripe3.png);
+    height: 360px;
+    border-bottom: 20px solid orange; 
+}
+
+
 /* --------------------------------------- */
 
 .content1 {
     display: grid;
-    grid-template-columns: 30% 70%;
+    grid-template-columns: 25% 75%;
+    border-top: 250px solid black;
 
 }
 .container10 {
+    background-image: url(../img/art1.png);
     display: flex;
-    height: 400px;
-    border: 2px solid black;
+    height: 245px;
+    /* border: 2px solid black; */
     font-family: muli;
 }
 
@@ -139,18 +149,147 @@ li {
 }
 
 .container11 {
-    display: flex;
-    height: 400px;
-    border: 2px solid black;
-    font-family: muli;
+    display: grid;
+    height: 245px;
+    /* border: 2px solid black; */
+    /* border-right: 10px solid black; */
+    border-right: 30px solid #FBE14C;
+    align-items: center;
+    justify-items: center;
 }
 
+.container11 > h2 {
+    color: #530E2F;
+    font-family: kumar one outline;
+    font-size: 75px;
+    /* margin-top: 20px; */
+}
+
+.content2 {
+    display: grid;
+    grid-template-columns: 60% 40%;
+    border-bottom: 50px solid #3A4252;;
+}
+.container12 {
+    display: flex;
+    height: 200px;
+    background-color: black;
+    border: 2px solid black;
+    /* border-left: 20px solid black; */
+    justify-content: center;
+    align-items: center;
+}
+
+div.school {
+    /* display: flex; */
+    color: white;
+    font-family: muli;
+    font-size: 20px;
+    margin-left: 30px;
+}
+
+.container13 {
+    background-color: darkgrey;
+    border-right: 60px solid maroon;
+    border-left: 130px solid #191D4C;
+}
+
+.container14 {
+    height:30px;
+    background-image: url(../img/stripe.png);
+    border-bottom: 10px solid black;
+}
+
+.container15 {
+    height: 200px;
+    background-color: white;
+}
+
+div.stripe4 {
+    background-image: url(../img/stripe4.png);
+    height: 60px;
+    border-bottom: 10px solid red;
+}
+
+.content3 {
+    display: grid;
+    height: 400px;
+    justify-content: center;
+    align-content: center;
+    /* background-color: #757475; */
+    border: 2px solid black;
+    
+}
+
+.content3 h1 {
+    font-family: bungee outline;
+    font-size: 60px;
+}
+
+.list {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    font-family: muli;
+    margin-left: 100px;
+    font-size: 20px;
+    /* justify-content: center; */
+    align-content: center;
+    /* justify-content: space-evenly; */
+}
+
+.container16 {
+    height: 70px;
+    border: 2px solid black;
+}
+.container17 {
+    height: 70px;
+    border: 2px solid black;
+}
+.container18 {
+    height: 50px;
+    border: 2px solid black;
+}
+.container19 {
+    height: 30px;
+    border: 2px solid black;
+}
+.container20 {
+    height: 20px;
+    border: 2px solid black;
+}
+.container21 {
+    height: 10px;
+    border: 2px solid black;
+}
+
+div.stripe5 {
+    height: 190px;
+    background-image: url(../img/stripe5.png);
+}
+
+
+.content4 {
+    display: grid;
+    height: 400px;
+    margin: 0 auto;
+    font-family: kumar one outline;
+    justify-content: center;
+    align-items: center;
+
+}
+
+
+
+
+
+/* ================================================ */
 .footer {
     display: flex;
-    background-color: fuchsia;
+    background-color: orange;
     height: 100px;
     align-items: center;
     justify-content: center;
+    border-top: 20px solid black;
 }
 
 .contact {
