working on queries

--- a/checkpoint-two/css/style.css
+++ b/checkpoint-two/css/style.css
@@ -161,7 +161,7 @@ li {
 .container11 > h2 {
     color: #530E2F;
     font-family: kumar one outline;
-    font-size: 75px;
+    font-size: 65px;
     /* margin-top: 20px; */
 }
 
@@ -278,10 +278,6 @@ div.stripe5 {
 
 }
 
-
-
-
-
 /* ================================================ */
 .footer {
     display: flex;
@@ -302,24 +298,14 @@ i {
 
 }
 
-/* .column:nth-child(1) {
-    border-top: 30px solid black;
-}
-
-.column:nth-child(2) {
-    border-top: 30px solid #F46731;
-}
-
-.column:nth-child(3) {
-    border-top: 30px solid #2bcdc0;
-} */
-
-
 @media (max-width: 576px) {
     .title-container {
         background-color: gray;
     }
 
+    .title-container img {
+        display: none;
+    }
     h1 {
         font-size: 1em;
     }
@@ -337,10 +323,36 @@ i {
     }
 
     .container1 {
+        display: grid;
         background-color: black;
         flex-direction: column;
         height: 100%;
         align-items: center;
-        justify-content: flex-start;
         flex-flow: column;
+    }
+
+    .container1 h1 {
+        color: white;
+        font-size: 20px;
+    }
+
+    #wheel1 {
+        display: none;
+    }
+
+    #wheel3 {
+        display: none;
+    }
+
+    .container11 h2{
+        font-size: 35px;
+    }
+
+    .school p {
+        font-size: 15px;
+
+    }
+
+    .aca-logo {
+        display: none;
     }
